samples/_failures_safe/1761490997_6f2b9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6542ce7e.c: In function ‘main’:
./samples/SAFE/__tmp_6542ce7e.c:168:9: error: expected expression at end of input
  168 |         if (!
      |         ^~
./samples/SAFE/__tmp_6542ce7e.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6542ce7e.c:168:9: error: expected declaration or statement at end of input
